--- a/ColoShopEcommerce.WebApp/Views/ShoppingCart/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/ShoppingCart/Index.cshtml
@@ -64,9 +64,9 @@
                                 }
                                 <tr>
                                     <th colspan="1">
-                                        <a type="submit" href="/thanh-toan" class="btn btn-danger" value="Submit">Thanh Toán</a>
+                                        <a type="submit" href="/thanh-toan" class="btn btn-danger " id="btnCheckout" value="Submit">Thanh Toán</a>
                                     </th>
-                                    <th colspan="6" class="text-right"> Tổng Tiền: </th>
+                                    <th colspan="5" class="text-right"> Tổng Tiền: </th>
                                     <th class="text-center subtotal">@Common.FormatCurrency(totalPrice, 0) VND</th>
                                     
                                     
