view index ordermanagement and detail

--- a/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
@@ -146,9 +146,9 @@
                         </a>
                         <div class="collapse" id="e-commerce">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="#"> Hóa Đơn Hàng </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="#"> Pricing Table </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="#"> Invoice </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","OrderManagement")"> Hóa Đơn Hàng </a></li>
+                                @*<li class="nav-item"> <a class="nav-link" href="#"> Pricing Table </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#"> Invoice </a></li>*@
                             </ul>
                         </div>
                     </li>
