--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/OrderManagement/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/OrderManagement/Index.cshtml
@@ -21,7 +21,7 @@
                                         <th>STT #</th>
                                         <th>Mã đơn hàng</th>
                                         <th>Tên khách hàng</th>
-                                        <th>Số Điện Thoại</th>
+                                        <th>Phone</th>
                                         <th>Tổng tiền</th>
                                         <th>Ngày tạo</th>
                                         <th>Tình trạng</th>
@@ -47,7 +47,7 @@
                                                 <td>
                                                     <a href="/admin/ordermanagement/viewdetail/@item.Id" class="btn btn-outline-primary">Xem</a>
                                                     @*<a href="/admin/products/edit/@item.Id" class="btn btn-outline-primary">Sửa</a>*@
-                                                    @*<a href="#" data-id="@item.Id" class="btn btn-outline-primary btnDelete" onclick="showSuccessToast()">Xóa</a>*@
+                                                    <a href="#" data-id="@item.Id" class="btn btn-outline-primary btnDelete" onclick="showSuccessToast()">Xóa</a>
                                                 </td>
                                             </tr>
                                             i++;
@@ -60,8 +60,6 @@
                                             <td colspan="4"> Không có bản ghi nào ... </td>
                                         </tr>
                                     }
-
-
                                 </tbody>
                             </table>
                         </div>
@@ -78,10 +76,10 @@
         $(document).ready(function () {
             $('body').on('click', '.btnDelete', function () {
                 var id = $(this).data("id");
-                var msg = confirm('Bạn có muốn xóa bản ghi này không ?');
+                var msg = confirm('Bạn có muốn xóa đơn hàng này không ?');
                 if (msg === true) {
                     $.ajax({
-                        url: '/admin/products/delete',
+                        url: '/admin/ordermanagement/delete',
                         type: 'POST',
                         data: { id: id },
                         success: function (rs) {
