--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/OrderManagement/Partial_Product.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/OrderManagement/Partial_Product.cshtml
@@ -5,7 +5,7 @@
     int i = 1;
     <div>
         
-        <table>
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th>#</th>
