CRUD Role management

--- a/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
@@ -88,6 +88,7 @@
                         <div class="collapse" id="auth">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" href="#"> Quản Trị </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","Role")"> Quyền quản trị </a></li>
                                 <li class="nav-item"> <a class="nav-link" href="#"> Khách Hàng </a></li>
                             </ul>
                         </div>
