Login Page admin and authentication

--- a/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Admin.cshtml
@@ -87,9 +87,9 @@
                         </a>
                         <div class="collapse" id="auth">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"> <a class="nav-link" href="#"> Quản Trị </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#"> Admin Account </a></li>
                                 <li class="nav-item"> <a class="nav-link" href="@Url.Action("Index","Role")"> Quyền quản trị </a></li>
-                                <li class="nav-item"> <a class="nav-link" href="#"> Khách Hàng </a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#"> Client Account </a></li>
                             </ul>
                         </div>
                     </li>
@@ -102,8 +102,8 @@
                         </a>
                         <div class="collapse" id="editors">
                             <ul class="nav flex-column sub-menu">
-                                <li class="nav-item"><a class="nav-link" href="#">Soạn Thảo Bài Viết</a></li>
-                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","News")">Soạn Thảo Tin Tức</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Bài Viết</a></li>
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","News")">Tin Tức</a></li>
                             </ul>
                         </div>
                     </li>
