Login, Logout, Register, ForgotPassword via Send Email in Client

--- a/ColoShopEcommerce.WebApp/Views/Account/Register.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Account/Register.cshtml
@@ -1,6 +1,8 @@
 ﻿@model ColoShopEcommerce.WebApp.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -39,3 +41,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
