--- a/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Client/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Client/plugins/OwlCarousel2-2.2.1/animate.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Client/styles/responsive.css">
+    <link href="~/Content/Client/styles/RegisterClient.css" rel="stylesheet" />
     <link href="~/Content/Client/styles/PaymentCheckout.css" rel="stylesheet" type="text/css" />
 
     @RenderSection("css", required: false)
@@ -36,20 +37,47 @@
                         </div>
                         <div class="col-md-6 text-right">
                             <div class="top_nav_right">
-                                <ul class="top_nav_menu">
+                                @using Microsoft.AspNet.Identity
+                                @if (Request.IsAuthenticated)
+                                {
+                                    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                                    {
+                                        @Html.AntiForgeryToken()
 
-                                    <!-- My Account -->
-                                    <li class="account">
-                                        <a href="#">
-                                            My Account
-                                            <i class="fa fa-angle-down"></i>
-                                        </a>
-                                        <ul class="account_selection">
-                                            <li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-                                            <li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+                                        <ul class="top_nav_menu">
+                                            <li class="account">
+                                                <a href="#">
+                                                    Hello @User.Identity.GetUserName()
+                                                    <i class="fa fa-angle-down"></i>
+                                                </a>
+                                                <ul class="account_selection">
+                                                    <li>
+                                                        @Html.ActionLink("Profile", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                                                    </li>
+                                                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                                                </ul>
+                                            </li>
                                         </ul>
-                                    </li>
-                                </ul>
+                                    }
+                                }
+                                else
+                                {
+                                    <ul class="top_nav_menu">
+
+                                        <!-- My Account -->
+                                        <li class="account">
+                                            <a href="#">
+                                                My Account
+                                                <i class="fa fa-angle-down"></i>
+                                            </a>
+                                            <ul class="account_selection">
+                                                <li><a href="/dang-nhap-tai-khoan"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
+                                                <li><a href="/dang-ky-tai-khoan"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                }
+
                             </div>
                         </div>
                     </div>
@@ -143,6 +171,7 @@
     <script src="~/Content/Client/js/categories_custom.js"></script>
     <script src="~/Content/Client/js/single_custom.js"></script>
     <script src="~/Scripts/jsShopping.js"></script>
+    <script src="~/Content/Client/js/RegisterClient.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
