--- a/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
+++ b/ColoShopEcommerce.WebApp/Views/Shared/_Client.cshtml
@@ -172,6 +172,8 @@
     <script src="~/Content/Client/js/single_custom.js"></script>
     <script src="~/Scripts/jsShopping.js"></script>
     <script src="~/Content/Client/js/RegisterClient.js"></script>
+    <script src="~/Scripts/InvoiceReport.js"></script>
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
