view account management

--- a/ColoShopEcommerce.WebApp/Areas/Admin/Views/LoginAdmin/Index.cshtml
+++ b/ColoShopEcommerce.WebApp/Areas/Admin/Views/LoginAdmin/Index.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="login-box">
         <h2>Admin Login</h2>
-        <form action="/admin/accountadmin/login" method="POST">
+        <form action="/admin/loginadmin/login" method="POST">
             <div class="user-box">
                 <input type="text" name="emailAdmin" required>
                 <label>Email</label>
